civo.com-drone-gitea-cicd-kubernetes/manifests/drone-agent.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone-agent
  labels:
    app: drone-agent
spec:
  replicas: 2
  selector:
    matchLabels:
      app: drone-agent
      tier: drone-agent
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: drone-agent
        tier: drone-agent
    spec:
      containers:
      - image: drone/agent:1
        args: ["agent"]
        name: drone-agent
        ports:
        - containerPort: 8000
          name: drone-agent
        volumeMounts:
        - mountPath: /var/run
          name: dockersock
      - image: docker:stable-dind
        name: docker-in-docker
        volumeMounts:
          - name: dockersock
            mountPath: "/var/run"
            #mountPath: "/var/run/docker.sock"
        securityContext:
          privileged: true
          allowPrivilegeEscalation: true
      volumes:
      - name: dockersock
        hostPath:
          path: /var/run/docker.sock
