civo.com-drone-gitea-cicd-kubernetes/manifests/drone-server.yml
apiVersion: v1
kind: Service
metadata:
  name: drone-server
spec:
  ports:
  - name: drone-server
    port: 80
    targetPort: 80
  selector:
    app: drone-server
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone-server
  labels:
    app: drone-server
spec:
  selector:
    matchLabels:
      app: drone-server
      tier: drone-server
  strategy:
    #type: Recreate
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: drone-server
        tier: drone-server
    spec:
      containers:
      - image: drone/drone:1
        name: drone-server
        ports:
        - containerPort: 80
          name: drone-server
        volumeMounts:
        - name: drone-server-persistent-storage
          mountPath: /var/lib/drone
      volumes:
      - name: drone-server-persistent-storage
        persistentVolumeClaim:
          claimName: drone-server-pv-claim
