civo.com-drone-gitea-cicd-kubernetes/manifests/gitea.yml
apiVersion: v1
kind: Service
metadata:
  name: gitea
spec:
  ports:
  - name: gitea
    port: 3000
    targetPort: 3000
  selector:
    app: gitea
  clusterIP: None
---
apiVersion: v1
kind: Service
metadata:
  name: gitea-ssh
spec:
  ports:
  - name: gitea-ssh
    port: 2222
    targetPort: 22
  selector:
    app: gitea
  type: LoadBalancer
  #clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
  labels:
    app: gitea
spec:
  selector:
    matchLabels:
      app: gitea
      tier: gitea
  strategy:
    #type: Recreate
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: gitea
        tier: gitea
    spec:
      containers:
      - image: gitea/gitea:1.8.1
        name: gitea
        ports:
        - containerPort: 3000
          name: gitea
        - containerPort: 2222
          name: gitea-ssh
        volumeMounts:
        - name: gitea-persistent-storage
          mountPath: /data
      volumes:
      - name: gitea-persistent-storage
        persistentVolumeClaim:
          claimName: gitea-pv-claim
