civo.com-drone-gitea-cicd-kubernetes/manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: drone
spec:
  rules:
  - host: drone.$CHANGEME_INGRESSDOMAIN
    http:
      paths:
      - backend:
          serviceName: drone-server
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitea
spec:
  rules:
  - host: gitea.$CHANGEME_INGRESSDOMAIN
    http:
      paths:
      - backend:
          serviceName: gitea
          servicePort: 3000
